media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - mountPath: /data
          name: data
      volumes:
      - name: config
        persistentVolumeClaim: 
          claimName: sonarr-config
      - name: data
        persistentVolumeClaim: 
          claimName: media-data
