media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: authentik-ak-outpost-sonarr@kubernetescrd
spec:
  rules:
  - host: sonarr.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: sonarr
            port: 
              name: http
  tls:
    - hosts:
        - sonarr.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
